--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
-version: '3'
+version: "3.8"
 services:
-  web:
+  backend:
     build: .
     ports:
-      - "4000:80"
+      - "5000:5000"
     depends_on:
       - db
   db:
-    image: mysql:5.7
+    image: mysql:8.3.0
+    container_name: db-mysql
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: root
     ports:
       - "3306:3306"
     volumes:
