--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,24 @@
 version: "3.8"
+
 services:
-  backend:
-    build: .
-    ports:
-      - "5000:5000"
-    depends_on:
-      - db
-  db:
-    image: mysql:8.3.0
-    container_name: db-mysql
+  # backend:
+  #   build: .
+  #   ports:
+  #     - "8080:8080"
+  #   depends_on:
+  #     - mysql
+  #   environment:
+  #     MYSQL_HOST: mysql
+  #     MYSQL_USER: root
+  #     MYSQL_PASSWORD: root
+  #     MYSQL_DB: kitaleicht
+
+  mysql:
+    build:
+      context: ./mysql
+      dockerfile: Dockerfile
     restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
     ports:
       - "3306:3306"
-    volumes:
-      - db-data:/var/lib/mysql
-volumes:
-  db-data:
+    environment:
+      MYSQL_ROOT_PASSWORD: root
