--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,6 @@
-version: "3.8"
+# version: "3.8"
 
 services:
-  # backend:
-  #   build: .
-  #   ports:
-  #     - "8080:8080"
-  #   depends_on:
-  #     - mysql
-  #   environment:
-  #     MYSQL_HOST: mysql
-  #     MYSQL_USER: root
-  #     MYSQL_PASSWORD: root
-  #     MYSQL_DB: kitaleicht
-
   mysql:
     build:
       context: ./mysql
@@ -22,3 +10,17 @@ services:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
+
+  backend:
+    build:
+      context: ./flask
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    depends_on:
+      - mysql
+    # environment:
+    #   MYSQL_HOST: mysql
+    #   MYSQL_USER: root
+    #   MYSQL_PASSWORD: root
+    #   MYSQL_DB: kitaleicht
